--- a/StakeHolder-Website/index.html
+++ b/StakeHolder-Website/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stake Holder</title>
+    <title>StakeHolder</title>
   </head>
   <body>
     <div class="top">
@@ -19,5 +19,5 @@
     </div>
     <div class="bottom"></div>
   </body>
-  <script src="../index.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
 </html>
